--- a/css/colors/color1.css
+++ b/css/colors/color1.css
@@ -23,7 +23,7 @@ a.btn-uniqu::before,
 .single-blog .contactForm button,
 .sidebar .widget-tag .tag:hover
 {
-	background: #f5484a
+	background: #2c2d32;
 }
 nav.mainNavbar .navigation-container .navMenu li a:hover,
 .mainHeader h1,
